//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Config {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  key String [not null]
  value String [not null]
  merchant Merchant
  merchantId String
}

Table Merchant {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  configs Config [not null]
  name String [unique, not null]
  users User [not null]
  password String [not null]
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  username String [unique, not null]
  wallet Wallet
  incomingTransactions IncomingTransactions [not null]
  outgoingTransactions OutgoingTransactions [not null]
  walletId String [unique]
  merchantId String
  merchant Merchant
}

Table Admin {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  username String [unique, not null]
  password String [not null]
}

Table Wallet {
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  address String [pk]
  user User
  incomingTransactions IncomingTransactions [not null]
  outgoingTransactions OutgoingTransactions [not null]
  lastAssignedAt DateTime
  pathId Int [not null]
  isReadyForSettlement Boolean [not null, default: false]
  settlements Settlements [not null]
  idrtBalance String
  bnbBalance String
}

Table Settlements {
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  settlementTxnHash String [pk]
  settlementAmount String [not null]
  settlementAddress String [not null]
  currencySymbol String [not null]
  totalGasFeePaid String [not null]
  fromWallet Wallet [not null]
  fromWalletAddress String [not null]
}

Table OutgoingTransactions {
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  txnHash String [pk]
  toAddress String [not null]
  userId String
  user User
  amount String [not null]
  gasFee String
  currencySymbol String [not null]
  walletId String
  wallet Wallet
}

Table IncomingTransactions {
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  txnHash String [pk]
  fromAddress String [not null]
  userId String
  user User
  amount String [not null]
  gasFee String
  commission String [not null]
  currencySymbol String [not null]
  walletId String
  wallet Wallet
  isOrphanTxn Boolean [not null, default: false]
  callbackStatus TransactionCallBackStatus [not null, default: 'UNACK']
}

Table WalletAssignment {
  id String [pk]
  attachedAt DateTime [default: `now()`, not null]
  detachedAt DateTime
  userId String [not null]
  walletId String [not null]
}

Table OrphanHistory {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  txnHash String [unique, not null]
  userId String [not null]
}

Table GlobalSettings {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  settings String [not null]
}

Enum TransactionCallBackStatus {
  ACK
  UNACK
}

Ref: Config.merchantId > Merchant.id

Ref: User.walletId - Wallet.address

Ref: User.merchantId > Merchant.id

Ref: Settlements.fromWalletAddress > Wallet.address

Ref: OutgoingTransactions.userId > User.id

Ref: OutgoingTransactions.walletId > Wallet.address

Ref: IncomingTransactions.userId > User.id

Ref: IncomingTransactions.walletId > Wallet.address